--- a/yaml/cookbook/new_t2_compass/process_middle_table_mt.yml
+++ b/yaml/cookbook/new_t2_compass/process_middle_table_mt.yml
@@ -119,7 +119,7 @@ mt_daily_env:
               得分: 0.0
               星级: 0.0
               完成单(未剔除异常单): 0
-              meta_day: '-'
+              meta_day: 99999999
             rename:
               加盟站ID: vendor_dc_id
               得分: kpi_score
@@ -136,25 +136,6 @@ mt_daily_env:
             on: [vendor_dc_id,meta_day]
             how: outer
             drop_stash: true
-        - stash_push_df: []
-
-        - fetch_dataset:
-            template_code: mt_day_59     # AA站点难度等级明细
-            dataset_cate: raw
-            columns: [站点ID,难度等级,meta_day]
-            ignore_null_error: true
-            empth_df_record:
-              站点ID: '-'
-              难度等级: '-'
-              meta_day: '-'
-            rename:
-              站点ID: vendor_dc_id
-              难度等级: difficulty_level
-        - stash_join_df:
-            on: [vendor_dc_id,meta_day]
-            how: outer
-            drop_stash: true
-
         - df_eval:
             - |
               [have_order_ratio] = [have_order_knight] / [register_knight]
@@ -162,6 +143,25 @@ mt_daily_env:
               [leave_ratio] = [leave_knight] / [register_knight]
               [total_entry_ratio] = [total_entry_knight] /  [total_register_knight]
               [total_leave_ratio] = [total_leave_knight] / [total_register_knight]
+        - stash_push_df: []
+
+        - fetch_dataset:
+            template_code: mt_day_59     # AA站点难度等级明细
+            dataset_cate: raw
+            columns: [站点ID,难度等级]
+            ignore_null_error: true
+            empth_df_record:
+              站点ID: '-'
+              难度等级: '-'
+            rename:
+              站点ID: vendor_dc_id
+              难度等级: difficulty_level
+        - stash_push_df:  []
+        - stash_join_df:
+            on: [vendor_dc_id]
+            how: outer
+            drop_stash: true
+
         - run_py:
             - |
               df = to_df(df)
@@ -206,8 +206,8 @@ mt_daily_env:
         - run_py:
             - |
               df = to_df(df)
-              total_dc = df.groupby(by=['meta_day']).size().reset_index().rename(columns={0:'total_join_rank_count'})
-              df = pd.merge(df,total_dc,on=['meta_day'],how='left',sort=False)
+              total_rank_count = df[["total_order","single_daily_order","avg_daily_order","avg_daily_knight","single_utility","total_utility","meta_day"]].groupby(by=['meta_day']).count().reset_index().rename(columns={"total_order":"total_order_join_rank_count","single_daily_order":"single_daily_order_join_rank_count","avg_daily_order":"avg_daily_order_join_rank_count","avg_daily_knight":"avg_daily_knight_join_rank_count","single_utility":"single_utility_join_rank_count","total_utility":"total_utility_join_rank_count"})
+              df = pd.merge(df,total_rank_count,on=['meta_day'],how='left',sort=False)
               df['total_order_rank'] = df.groupby(by=['meta_day'])['total_order'].rank(method='min',ascending=False)
               df['single_daily_order_rank'] = df.groupby(by=['meta_day'])['single_daily_order'].rank(method='min',ascending=False)
               df['avg_daily_order_rank'] = df.groupby(by=['meta_day'])['avg_daily_order'].rank(method='min',ascending=False)
@@ -232,8 +232,8 @@ mt_daily_env:
         - run_py:
             - |
               df = to_df(df)
-              total_dc = df.groupby(by=['meta_day']).size().reset_index().rename(columns={0:'total_join_rank_count'})
-              df = pd.merge(df,total_dc,on=['meta_day'],how='left',sort=False)
+              total_rank_count = df[["total_order","single_daily_order","avg_daily_order","avg_daily_knight","single_utility","total_utility","meta_day"]].groupby(by=['meta_day']).count().reset_index().rename(columns={"total_order":"total_order_join_rank_count","single_daily_order":"single_daily_order_join_rank_count","avg_daily_order":"avg_daily_order_join_rank_count","avg_daily_knight":"avg_daily_knight_join_rank_count","single_utility":"single_utility_join_rank_count","total_utility":"total_utility_join_rank_count"})
+              df = pd.merge(df,total_rank_count,on=['meta_day'],how='left',sort=False)
               df['total_order_rank'] = df.groupby(by=['meta_day'])['total_order'].rank(method='min',ascending=False)
               df['single_daily_order_rank'] = df.groupby(by=['meta_day'])['single_daily_order'].rank(method='min',ascending=False)
               df['avg_daily_order_rank'] = df.groupby(by=['meta_day'])['avg_daily_order'].rank(method='min',ascending=False)
@@ -442,7 +442,7 @@ mt_daily_env:
             val: 'equal'
 
         - fetch_cols:
-            columns: [supplier_id,supplier_name,city_name,vendor_dc_id,dc_name,alliance_id,meta_day,dimension,total_join_rank_count,dc_count,total_order,single_daily_order,single_daily_order_rank,single_daily_order_rank_status,total_order_rank,total_order_rank_status,avg_daily_order,avg_daily_order_rank,avg_daily_order_rank_status,avg_daily_order_year_ratio,avg_daily_order_year_ratio_status,avg_daily_knight,avg_daily_knight_rank,avg_daily_knight_rank_status,avg_daily_knight_year_ratio,avg_daily_knight_year_ratio_status,single_utility,single_utility_rank,single_utility_rank_status,single_utility_year_ratio,total_utility,total_utility_year_ratio,total_utility_year_ratio_status,total_utility_rank,total_utility_rank_status,single_utility_year_ratio_status,have_order_knight,have_order_ratio,entry_knight,entry_ratio,leave_knight,leave_ratio,kpi_score,star_level,kpi_score_rank,difficulty_level,star_level_rank,daily_stay_ratio_rank,daily_stay_ratio,over_order_no_sub,total_leave_ratio,total_entry_ratio,total_entry_knight,total_leave_knight]
+            columns: [supplier_id,supplier_name,city_name,vendor_dc_id,dc_name,alliance_id,meta_day,dimension,total_join_rank_count,dc_count,total_order,single_daily_order,single_daily_order_rank,single_daily_order_rank_status,total_order_rank,total_order_rank_status,avg_daily_order,avg_daily_order_rank,avg_daily_order_rank_status,avg_daily_order_year_ratio,avg_daily_order_year_ratio_status,avg_daily_knight,avg_daily_knight_rank,avg_daily_knight_rank_status,avg_daily_knight_year_ratio,avg_daily_knight_year_ratio_status,single_utility,single_utility_rank,single_utility_rank_status,single_utility_year_ratio,total_utility,total_utility_year_ratio,total_utility_year_ratio_status,total_utility_rank,total_utility_rank_status,single_utility_year_ratio_status,have_order_knight,have_order_ratio,entry_knight,entry_ratio,leave_knight,leave_ratio,kpi_score,star_level,kpi_score_rank,difficulty_level,star_level_rank,daily_stay_ratio_rank,daily_stay_ratio,over_order_no_sub,total_leave_ratio,total_entry_ratio,total_entry_knight,total_leave_knight,total_order_join_rank_count,single_daily_order_join_rank_count,avg_daily_order_join_rank_count,avg_daily_knight_join_rank_count,single_utility_join_rank_count,total_utility_join_rank_count]
         - set_meta_month_column:
             - book_month
 
@@ -594,8 +594,8 @@ mt_daily_env:
         - run_py:
             - |
               df = to_df(df)
-              total_dc = df.groupby(by=['meta_day']).size().reset_index().rename(columns={0:'total_join_rank_count'})
-              df = pd.merge(df,total_dc,on=['meta_day'],how='left',sort=False)
+              total_rank_count = df[["total_order","single_daily_order","avg_daily_order","avg_daily_knight","single_utility","total_utility","meta_day"]].groupby(by=['meta_day']).count().reset_index().rename(columns={"total_order":"total_order_join_rank_count","single_daily_order":"single_daily_order_join_rank_count","avg_daily_order":"avg_daily_order_join_rank_count","avg_daily_knight":"avg_daily_knight_join_rank_count","single_utility":"single_utility_join_rank_count","total_utility":"total_utility_join_rank_count"})
+              df = pd.merge(df,total_rank_count,on=['meta_day'],how='left',sort=False)
               df['total_order_rank'] = df.groupby(by=['meta_day'])['total_order'].rank(method='min',ascending=False)
               df['single_daily_order_rank'] = df.groupby(by=['meta_day'])['single_daily_order'].rank(method='min',ascending=False)
               df['avg_daily_order_rank'] = df.groupby(by=['meta_day'])['avg_daily_order'].rank(method='min',ascending=False)
@@ -619,8 +619,8 @@ mt_daily_env:
         - run_py:
             - |
               df = to_df(df)
-              total_dc = df.groupby(by=['meta_day']).size().reset_index().rename(columns={0:'total_join_rank_count'})
-              df = pd.merge(df,total_dc,on=['meta_day'],how='left',sort=False)
+              total_rank_count = df[["total_order","single_daily_order","avg_daily_order","avg_daily_knight","single_utility","total_utility","meta_day"]].groupby(by=['meta_day']).count().reset_index().rename(columns={"total_order":"total_order_join_rank_count","single_daily_order":"single_daily_order_join_rank_count","avg_daily_order":"avg_daily_order_join_rank_count","avg_daily_knight":"avg_daily_knight_join_rank_count","single_utility":"single_utility_join_rank_count","total_utility":"total_utility_join_rank_count"})
+              df = pd.merge(df,total_rank_count,on=['meta_day'],how='left',sort=False)
               df['total_order_rank'] = df.groupby(by=['meta_day'])['total_order'].rank(method='min',ascending=False)
               df['single_daily_order_rank'] = df.groupby(by=['meta_day'])['single_daily_order'].rank(method='min',ascending=False)
               df['avg_daily_order_rank'] = df.groupby(by=['meta_day'])['avg_daily_order'].rank(method='min',ascending=False)
@@ -828,7 +828,7 @@ mt_daily_env:
             val: 'equal'
 
         - fetch_cols:
-            columns: [supplier_id,supplier_name,city_name,alliance_id,meta_day,dimension,total_join_rank_count,dc_count,total_order,single_daily_order,single_daily_order_rank,single_daily_order_rank_status,total_order_rank,total_order_rank_status,avg_daily_order,avg_daily_order_rank,avg_daily_order_rank_status,avg_daily_order_year_ratio,avg_daily_order_year_ratio_status,avg_daily_knight,avg_daily_knight_rank,avg_daily_knight_rank_status,avg_daily_knight_year_ratio,avg_daily_knight_year_ratio_status,single_utility,single_utility_rank,single_utility_rank_status,single_utility_year_ratio,total_utility,total_utility_year_ratio,total_utility_year_ratio_status,total_utility_rank,total_utility_rank_status,single_utility_year_ratio_status,have_order_knight,have_order_ratio,entry_knight,entry_ratio,leave_knight,leave_ratio,star_level,star_level_rank,daily_stay_ratio_rank,daily_stay_ratio,total_leave_ratio,total_entry_ratio]
+            columns: [supplier_id,supplier_name,city_name,alliance_id,meta_day,dimension,total_join_rank_count,dc_count,total_order,single_daily_order,single_daily_order_rank,single_daily_order_rank_status,total_order_rank,total_order_rank_status,avg_daily_order,avg_daily_order_rank,avg_daily_order_rank_status,avg_daily_order_year_ratio,avg_daily_order_year_ratio_status,avg_daily_knight,avg_daily_knight_rank,avg_daily_knight_rank_status,avg_daily_knight_year_ratio,avg_daily_knight_year_ratio_status,single_utility,single_utility_rank,single_utility_rank_status,single_utility_year_ratio,total_utility,total_utility_year_ratio,total_utility_year_ratio_status,total_utility_rank,total_utility_rank_status,single_utility_year_ratio_status,have_order_knight,have_order_ratio,entry_knight,entry_ratio,leave_knight,leave_ratio,star_level,star_level_rank,daily_stay_ratio_rank,daily_stay_ratio,total_leave_ratio,total_entry_ratio,total_order_join_rank_count,single_daily_order_join_rank_count,avg_daily_order_join_rank_count,avg_daily_knight_join_rank_count,single_utility_join_rank_count,total_utility_join_rank_count]
         - set_meta_month_column:
             - book_month
 
@@ -882,17 +882,19 @@ mt_daily_env:
         - fetch_dataset:
             template_code: mt_day_18      #单日骑手数据
             dataset_cate: raw
-            columns: [ 骑手ID,站点ID,完成单量,在岗时长,meta_day]
+            columns: [ 骑手ID,站点ID,站点,完成单量,在岗时长,meta_day]
             ignore_null_error: true
             empty_df_record:
               骑手ID: '-'
               站点ID: '-'
+              站点: '-'
               完成单量: 0
               在岗时长: 0.0
               meta_day: '-'
             rename:
               骑手ID: knight_id
               站点ID: vendor_dc_id
+              站点: dc_name
               完成单量: single_daily_order
               在岗时长: on_guard_time
         - add_cols:
@@ -907,7 +909,7 @@ mt_daily_env:
               df = to_df(df)
               need = df.groupby(by=['vendor_dc_id','knight_id'])['attendance'].sum().reset_index()
               max_day = df['meta_day'].max()
-              df_max_day = df[df['meta_day'] == max_day ][['vendor_dc_id','knight_id','single_daily_order','on_guard_time','meta_day']]
+              df_max_day = df[df['meta_day'] == max_day ][['vendor_dc_id','dc_name','knight_id','single_daily_order','on_guard_time','meta_day']]
               df = pd.merge(df_max_day,need,on=['vendor_dc_id','knight_id'],how='left',sort=False)
               df['days'] = df['meta_day'].map(str).str[6:].map(int)
               df['attendance_ratio'] = df['attendance'] / df['days']
@@ -939,7 +941,7 @@ mt_daily_env:
             val: 1
             else_val: 0
         - df_groupby:
-            by: [ vendor_dc_id,meta_day]
+            by: [ vendor_dc_id,dc_name,meta_day]
         - df_sum:
             column: [daily_order_not_standard_count,on_guard_time_not_standard_count,attendance_not_standard_count,get_standard_count,total_knight]
         - df_reset_index: []
@@ -1731,4 +1733,9 @@ mt_daily_env:
             drop_stash: true
         - df_eval:
             - '[attendance] = [出勤天数] / [days]'
+        - run_py:
+            - |
+                df = to_df(df)
+                df=df[df['book_day']==df['book_day'].max()]
+                result = to_dd(df)
 
