--- a/财报/21年财报20210206/cookbook/code/clean_chengtu/city.yml
+++ b/财报/21年财报20210206/cookbook/code/clean_chengtu/city.yml
@@ -140,12 +140,15 @@ dataset_pipeline:
         Q-20605: 0
         Q-20701: 0
         Q-20702: 0
+        Q-2010101: 0
+        Q-2010102: 0
 
   - df_fillna:
       value: 0.0
 
   - row_eval_by_index:
       exp_str: |
+                {{Q-20101}} = {{Q-20101}} + {{Q-2010101}} + {{Q-2010102}}
                 {{Q-102}} = {{Q-10201}} + {{Q-10202}} + {{Q-10203}}
                 {{QS-10101014}} = {{Q-1010101}} + {{Q-1010202}} + {{Q-1010203}} + {{Q-1010204}} + {{Q-1010102}} + {{Q-102}}
                 {{CAD-401}} = {{C-401}} / {{month_days}}
@@ -468,6 +471,12 @@ dataset_pipeline:
         - index: Q-20702
           cols:
             ac_name: 外部招聘
+        - index: Q-2010101
+          cols:
+            ac_name: 全职
+        - index: Q-2010102
+          cols:
+            ac_name: 兼职
 
   - df_fillna:
       value: 0
@@ -476,7 +485,15 @@ dataset_pipeline:
       sort_list: [ ac_code, ac_name, 合计 ]
 
   - sort_by_index:
-      sort_list: [QS-10101014,Q-1010101,C-401,CAD-401,QAO-1010101,C-402,CAO-402,QAD-1010101,IPQ-1010101,Q-1010102,C-415,CAD-415,QAO-1010102,C-416,CAO-416,QAD-1010102,IPQ-1010102,Q-1010202,C-403,C-404,C-405,CAD-405,CAH-405,C-406,CAH-406,IPQ-1010202406,IPQ-1010202,Q-1010203,C-407,QAO-1010203,IPQ-1010203,Q-1010204,IPQ-1010204,Q-102,CS-40810,QAO-102,IPQ-102,Q-10201,C-408,QAO-10201,Q-10202,C-409,QAO-10202,Q-10203,C-410,QAO-10203,Q-701,QS-2017,IPQS-2017,Q-20101,QAO-20101,C-411,QAH-20101,C-412,QAD-20101,Q-202,QAO-202,QAH-202,Q-20201,Q-20202,Q-20203,Q-10204,Q-203,QAO-203,Q-20301,Q-20302,Q-20303,Q-205,Q-20501,Q-20502,Q-206,Q-20605,Q-207,CS-4134,QAH-207,Q-20701,C-413,QAH-20701,Q-20702,C-414,QAH-20702,QS-1,IPQS-1]
+      sort_list: [
+          QS-10101014,Q-1010101,C-401,CAD-401,QAO-1010101,C-402,CAO-402,QAD-1010101,IPQ-1010101,Q-1010102,C-415,CAD-415,
+          QAO-1010102,C-416,CAO-416,QAD-1010102,IPQ-1010102,Q-1010202,C-403,C-404,C-405,CAD-405,CAH-405,C-406,CAH-406,
+          IPQ-1010202406,IPQ-1010202,Q-1010203,C-407,QAO-1010203,IPQ-1010203,Q-1010204,IPQ-1010204,Q-102,CS-40810,
+          QAO-102,IPQ-102,Q-10201,C-408,QAO-10201,Q-10202,C-409,QAO-10202,Q-10203,C-410,QAO-10203,Q-701,QS-2017,IPQS-2017,
+          Q-20101,QAO-20101,C-411,QAH-20101,C-412,QAD-20101,Q-2010101,Q-2010102,Q-202,QAO-202,QAH-202,Q-20201,Q-20202,Q-20203,Q-10204,Q-203,
+          QAO-203,Q-20301,Q-20302,Q-20303,Q-205,Q-20501,Q-20502,Q-206,Q-20605,Q-207,CS-4134,QAH-207,Q-20701,C-413,QAH-20701,
+          Q-20702,C-414,QAH-20702,QS-1,IPQS-1
+      ]
 
   - row_int_format_by_index:
       index_rows: [
@@ -494,7 +511,7 @@ dataset_pipeline:
           Q-202, Q-20201, Q-20202, Q-20203, Q-10204, Q-203, Q-20301, Q-20302, Q-20303, Q-205, Q-20501, Q-20502, Q-206,
           Q-20605, Q-207, Q-20701, Q-20702, QS-10101014, QS-2017, QS-1, QAO-1010101, QAD-1010101, QAO-1010102,
           QAD-1010102, QAO-1010203, QAO-102, QAO-10201, QAO-10202, QAO-10203, QAO-20101, QAH-20101, QAD-20101,
-          QAO-202, QAH-202, QAO-203, QAH-207, QAH-20701, QAH-20702
+          QAO-202, QAH-202, QAO-203, QAH-207, QAH-20701, QAH-20702,Q-2010101,Q-2010102
       ]
 
   - row_float_format_by_index:
