--- a/财报/21年财报20210206/cookbook/code/travel_taxi/city.yml
+++ b/财报/21年财报20210206/cookbook/code/travel_taxi/city.yml
@@ -270,8 +270,9 @@ dataset_pipeline:
                 {{CPQ-214}} = {{Q-214}} / {{QS-204010}}
                 {{CS-3078}} = {{C-307}} + {{C-308}}
                 {{CS-30910}} = {{C-309}} + {{C-310}}
-                {{CS-3016}} = {{CS-3013}} + {{CS-3046}}
-                {{QAH-20805}} = {{Q-20805}} / {{CS-3016}}
+                {{CS-3014}} = {{CS-3013}} + {{CS-3046}}
+                {{CS-3016}} = {{CS-3078}} + {{CS-30910}}
+                {{QAH-20805}} = {{Q-20805}} / {{CS-3014}}
                 {{QSAH-104013}} = {{QS-104013}} / {{CS-3016}}
                 {{QAH-1040}} = {{QS-204010}} / {{CS-3016}}
                 {{CIP-204010}} = {{QS-204010}} / {{QS-104013}}
@@ -321,9 +322,12 @@ dataset_pipeline:
         - index: CS-3046
           cols:
             ac_name: 融资租出车辆数
-        - index: CS-3016
+        - index: CS-3014
           cols:
             ac_name: 总计租出车辆数
+        - index: CS-3016
+          cols:
+            ac_name: 总计租入车辆数
         - index: QSAH-104013
           cols:
             ac_name: 总计租出车单车收入
@@ -714,23 +718,23 @@ dataset_pipeline:
 
   - sort_by_index:
       sort_list: [
-          QS-104013,CS-3016,QSAH-104013,Q-10401,CS-3013,QAH-10401,Q-1040101,C-301,QAH-1040101,Q-1040102,C-302,
+          QS-104013,CS-3014,QSAH-104013,Q-10401,CS-3013,QAH-10401,Q-1040101,C-301,QAH-1040101,Q-1040102,C-302,
           QAH-1040102,Q-1040103,C-303,QAH-1040103,Q-10402,CS-3046,QAH-10402,Q-1040201,C-304,QAH-1040201,Q-1040202,C-305,
           QAH-1040202,Q-1040203,C-306,QAH-1040203,Q-10303,Q-1030301,Q-1030302,Q-1030303,Q-10102,Q-1010201,Q-1010202,
-          Q-1010203,Q-1010204,Q-701,QS-204010,QAH-1040,CIP-204010,Q-20401,CS-3078,QA-20401,CIP-20401,CCP-20401,Q-2040101,
+          Q-1010203,Q-1010204,Q-701,QS-204010,CS-3016,QAH-1040,CIP-204010,Q-20401,CS-3078,QA-20401,CIP-20401,CCP-20401,Q-2040101,
           C-307,QAH-2040101,Q-2040102,C-308,QAH-2040102,Q-20402,CS-30910,QAH-20402,IPQ-20402,CPQ-20402,Q-2040201,C-309,
-          QAH-2040201,Q-2040202,C-310,QAH-2040202,Q-211,Q-21101,C-311,QAH-21101,Q-21102,Q-2110201,Q-2110202,IPQ-211,
-          CPQ-211,Q-212,Q-21201,Q-21202,IPQ-212,CPQ-212,Q-208,QAH-208,IPQ-208,CPQ-208,Q-20801,QAH-20801,Q-2080101,
+          QAH-2040201,Q-2040202,C-310,QAH-2040202,Q-211,IPQ-211,CPQ-211,Q-21101,C-311,QAH-21101,Q-21102,Q-2110201,Q-2110202,
+          Q-212,IPQ-212,CPQ-212,Q-21201,Q-21202,Q-208,QAH-208,IPQ-208,CPQ-208,Q-20801,QAH-20801,Q-2080101,
           Q-2080102,Q-2080103,Q-2080104,Q-2080105,Q-2080106,Q-20802,
           QAH-20802,Q-2080201,Q-2080202,Q-20803,QAH-20803,Q-2080301,Q-2080302,Q-2080303,Q-20804,QAH-20804,Q-20805,
           QAH-20805,Q-2080501,Q-2080502,Q-2080503,Q-2080504,Q-2080505,Q-2080506,Q-213,IPQ-213,CPQ-213,Q-21301,Q-21302,
-          Q-21303,Q-21304,Q-214,QS-1,IPQS-1
+          Q-21303,Q-21304,Q-214,IPQ-214,CPQ-214,QS-1,IPQS-1
       ]
 
   - row_int_format_by_index:
       index_rows: [
           C-301, C-302, C-303, C-304, C-305, C-306, C-307, C-308, C-309, C-310, C-311,
-          CS-3013, CS-3046, CS-3016, CS-3078, CS-30910
+          CS-3013, CS-3046, CS-3014,CS-3016, CS-3078, CS-30910
       ]
 
   - row_pct_format_by_index:
