--- a/财报/21年财报20210206/cookbook/team/team.yml
+++ b/财报/21年财报20210206/cookbook/team/team.yml
@@ -128,6 +128,8 @@ dataset_pipeline:
         Q-2005: 0
         C-701: 0
         C-702: 0
+        Q-30108: 0
+        C-708: 0
 
   - df_fillna:
       value: 0.0
@@ -140,8 +142,9 @@ dataset_pipeline:
 
   - row_eval_by_index:
       exp_str: |
+                {{QAH-30103}} = {{Q-30108}} / {{C-708}}
                 {{Q-30201}} = {{Q-3020101}} + {{Q-3020102}}
-                {{Q-301}} = {{Q-30101}} + {{Q-30102}} + {{Q-30103}} + {{Q-30104}} + {{Q-30105}} + {{Q-30106}} + {{Q-30107}}
+                {{Q-301}} = {{Q-30101}} + {{Q-30102}} + {{Q-30103}} + {{Q-30104}} + {{Q-30105}} + {{Q-30106}} + {{Q-30107}} + {{Q-30108}}
                 {{Q-302}} = {{Q-30201}} + {{Q-30202}} + {{Q-30203}} + {{Q-30204}} + {{Q-30205}} + {{Q-30206}} + {{Q-30207}} + {{Q-30208}} + {{Q-30209}} + {{Q-30210}}
                 {{Q-303}} = {{Q-30301}} + {{Q-30302}} + {{Q-30303}}
                 {{QS-3013}} = {{Q-301}} + {{Q-302}} + {{Q-303}}
@@ -314,25 +317,37 @@ dataset_pipeline:
         - index: Q-30301
           cols:
             ac_name: 低值易耗品摊销
-
+        - index: Q-30108
+          cols:
+            ac_name: 三线服务费
+        - index: C-708
+          cols:
+            ac_name: 三线人数
+        - index: QAH-30103
+          cols:
+            ac_name: 三线服务费人均工资
   - sort_by_columns:
       sort_list: [ ac_code, ac_name, 合计, 事业一部,事业二部, 事业三部]
 
   - sort_by_index:
-      sort_list: [QS-3013,Q-301,CPQ-301,Q-30101,C-701,QAH-30101,Q-30102,C-702,QAH-30102,Q-30103,Q-30104,Q-30105,Q-30106,Q-30107,Q-302,CPQ-302,Q-30201,C-703,QAH-3020101,Q-3020101,Q-3020102,Q-30202,Q-30203,Q-30204,Q-30205,Q-30206,Q-30207,Q-30208,Q-30209,Q-30210,Q-303,CPQ-30301,Q-30301,Q-30302,Q-30303,QS-4014,Q-401,Q-2001,C-704,Q-2005,C-705,Q-402,Q-403,Q-404,Q-500,Q-600,Q-700,Q-800,Q-900,C-706,C-707]
+      sort_list: [
+         QS-3013,Q-301,CPQ-301,Q-30101,C-701,QAH-30101,Q-30108,C-708,QAH-30103,Q-30102,C-702,QAH-30102,Q-30103,Q-30104,Q-30105,Q-30106,Q-30107,
+         Q-302,CPQ-302,Q-30201,C-703,QAH-3020101,Q-3020101,Q-3020102,Q-30202,Q-30203,Q-30204,Q-30205,Q-30206,Q-30207,
+         Q-30208,Q-30209,Q-30210,Q-303,CPQ-30301,Q-30301,Q-30302,Q-30303,QS-4014,Q-401,Q-2001,C-704,Q-2005,C-705,Q-402,
+         Q-403,Q-404,Q-500,Q-600,Q-700,Q-800,Q-900,C-706,C-707]
 
 #  - row_int_format_by_index:
 #      index_rows: [C-701, C-702, C-703, C-704, C-705, C-706, C-707]
 
   - row_pct_format_by_index:
-      index_rows: [CPQ-301, CPQ-302, CPQ-30301]
+      index_rows: [CPQ-301, CPQ-302, CPQ-30301,QAH-30103]
 
   - row_money_format_by_index:
       index_rows: [
           QS-3013, Q-301, Q-30101, QAH-30101, Q-30102, QAH-30102, Q-30103, Q-30104, Q-30105, Q-30106, Q-30107,
           Q-302, Q-30201, QAH-3020101, Q-3020101, Q-3020102, Q-30202, Q-30203, Q-30204, Q-30205, Q-30206, Q-30207,
           Q-30208, Q-30209, Q-30210, Q-303, Q-30301, Q-30302, Q-30303, QS-4014, Q-401, Q-2001, Q-2005, Q-402,
-          Q-403, Q-404, Q-500, Q-600, Q-700, Q-800, Q-900
+          Q-403, Q-404, Q-500, Q-600, Q-700, Q-800, Q-900,Q-30108
       ]
 
   - df_rename_columns:
