--- a/财报/21年财报20210206/cookbook/code/clean_lailai/supplier.yml
+++ b/财报/21年财报20210206/cookbook/code/clean_lailai/supplier.yml
@@ -146,12 +146,15 @@ dataset_pipeline:
         C-507: 0
         C-508: 0
         Q-20605: 0
+        Q-2010101: 0
+        Q-2010102: 0
 
   - df_fillna:
       value: 0.0
 
   - row_eval_by_index:
       exp_str: |
+                {{Q-20101}} = {{Q-20101}} + {{Q-2010101}} + {{Q-2010102}}
                 {{Q-202}} = {{Q-20201}}
                 {{Q-206}} = {{Q-20605}}
                 {{Q-207}} = {{Q-20701}} + {{Q-20702}}
@@ -351,6 +354,12 @@ dataset_pipeline:
         - index: Q-20101
           cols:
             ac_name: 一线服务费
+        - index: Q-2010101
+          cols:
+            ac_name: 全职
+        - index: Q-2010102
+          cols:
+            ac_name: 兼职
 
   - df_fillna:
       value: 0
@@ -359,7 +368,12 @@ dataset_pipeline:
       sort_list: [ ac_code, ac_name, 合计 ]
 
   - sort_by_index:
-      sort_list: [QS-10101012,Q-1010101,C-501,CAD-501,QAO-1010101,C-502,QAO-502,QAD-1010101,IPQ-1010101,Q-1010102,C-503,CAD-503,QAO-1010102,C-504,CAO-504,QAD-1010102,IPQ-1010102,Q-1010202,IPQ-1010202,Q-701,QS-2017,IPQS-2017,Q-20101,QAO-20101,C-505,QAH-20101,C-506,QAD-20101,Q-202,QAH-202,QAO-202,Q-20201,Q-206,Q-20605,Q-207,CS-5078,QAH-207,IPQ-207,CPQ-207,Q-20701,C-507,QAH-20701,Q-20702,C-508,QAH-20702,QS-1,IPQS-1]
+      sort_list: [
+          QS-10101012,Q-1010101,C-501,CAD-501,QAO-1010101,C-502,QAO-502,QAD-1010101,IPQ-1010101,Q-1010102,C-503,
+          CAD-503,QAO-1010102,C-504,CAO-504,QAD-1010102,IPQ-1010102,Q-1010202,IPQ-1010202,Q-701,QS-2017,
+          IPQS-2017,Q-20101,QAO-20101,C-505,QAH-20101,C-506,QAD-20101,Q-2010101,Q-2010102,Q-202,QAH-202,QAO-202,Q-20201,Q-206,
+          Q-20605,Q-207,CS-5078,QAH-207,IPQ-207,CPQ-207,Q-20701,C-507,QAH-20701,Q-20702,C-508,QAH-20702,QS-1,IPQS-1
+      ]
 
   - row_int_format_by_index:
       index_rows: [C-501, C-502, C-503, C-504, C-505, C-506, C-507, C-508]
@@ -371,8 +385,10 @@ dataset_pipeline:
       index_rows: [
           Q-1010101, Q-1010102, Q-1010202, Q-701, Q-20101, Q-202, Q-20201, Q-206, Q-20605, Q-207, Q-20701, Q-20702,
           QAO-1010101, QAO-502, QAD-1010101, QAO-1010102, QAD-1010102, QAO-20101,
-          QAH-20101, QAD-20101, QAH-202, QAO-202, QAH-207, QAH-20701, QAH-20702, QS-10101012, QS-2017, QS-1
+          QAH-20101, QAD-20101, QAH-202, QAO-202, QAH-207, QAH-20701, QAH-20702, QS-10101012, QS-2017, QS-1,Q-2010101,
+          Q-2010102
       ]
+
 
   - row_float_format_by_index:
       index_rows: [
