--- a/财报/21年财报20210206/cookbook/code/other/code.yml
+++ b/财报/21年财报20210206/cookbook/code/other/code.yml
@@ -157,16 +157,22 @@ dataset_pipeline:
         C-601: 0
         C-602: 0
         C-603: 0
+        Q-2010101: 0
+        Q-2010102: 0
 
   - df_fillna:
       value: 0.0
 
   - row_eval_by_index:
       exp_str: |
+                {{Q-205}} = {{Q-205}} + {{Q-20501}} + {{Q-20502}}
+                {{Q-20101}} = {{Q-20101}} + {{Q-2010101}} + {{Q-2010102}}
                 {{Q-202}} = {{Q-20201}} + {{Q-20202}} + {{Q-20203}} + {{Q-20204}}
                 {{Q-207}} = {{Q-20701}} + {{Q-20702}}
                 {{QS-1010203}} = {{Q-1010203}}
-                {{QS-2017}} = {{Q-20101}} + {{Q-202}} + {{Q-207}}
+                {{QS-2017}} = {{Q-20101}} + {{Q-202}} + {{Q-207}} + {{Q-205}}
+                {{IPQ-205}} = {{Q-205}} / {{QS-1010203}}
+                {{CPQ-205}} = {{Q-205}} / {{QS-2017}}
                 {{IPQS-2017}} = {{QS-2017}} / {{QS-1010203}}
                 {{QAH-20101}} = {{Q-20101}} / {{C-601}}
                 {{IPQ-20101}} = {{Q-20101}} / {{QS-1010203}}
@@ -186,7 +192,6 @@ dataset_pipeline:
                 {{QAH-20702}} = {{Q-20702}} / {{C-603}}
                 {{QS-1}} = {{QS-1010203}} + {{Q-701}} - {{QS-2017}}
                 {{IPQS-1}} = {{QS-1}} / {{QS-1010203}}
-
       index_col: ac_code
       exclude_cols: [ac_name]
       target_rows:
@@ -201,52 +206,52 @@ dataset_pipeline:
             ac_name: 收入占比
         - index: QAH-20101
           cols:
-            ac_name: 人均成本
+            ac_name: 主营业务人均成本
         - index: IPQ-20101
           cols:
-            ac_name: 收入占比
+            ac_name: 主营业务收入占比
         - index: CPQ-20101
           cols:
-            ac_name: 成本占比
+            ac_name: 主营业务成本占比
         - index: QAH-202
           cols:
-            ac_name: 人均成本
+            ac_name: 保险人均成本
         - index: IPQ-202
           cols:
-            ac_name: 收入占比
+            ac_name: 保险收入占比
         - index: CPQ-202
           cols:
-            ac_name: 成本占比
+            ac_name: 保险成本占比
         - index: QAH-20201
           cols:
-            ac_name: 人均成本
+            ac_name: 意外险人均成本
         - index: QAH-20202
           cols:
-            ac_name: 人均成本
+            ac_name: 工伤险人均成本
         - index: QAH-20203
           cols:
-            ac_name: 人均成本
+            ac_name: 社保公积金人均成本
         - index: QAH-20204
           cols:
-            ac_name: 人均成本
+            ac_name: 商业保险外赔偿人均成本
         - index: CS-6023
           cols:
             ac_name: 招聘人数
         - index: QAH-207
           cols:
-            ac_name: 人均成本
+            ac_name: 招聘人均成本
         - index: IPQ-207
           cols:
-            ac_name: 收入占比
+            ac_name: 招聘收入占比
         - index: CPQ-207
           cols:
-            ac_name: 成本占比
+            ac_name: 招聘成本占比
         - index: QAH-20701
           cols:
-            ac_name: 人均成本
+            ac_name: 内部招聘人均成本
         - index: QAH-20702
           cols:
-            ac_name: 人均成本
+            ac_name: 外部招聘人均成本
         - index: QS-1
           cols:
             ac_name: code利润
@@ -319,6 +324,27 @@ dataset_pipeline:
         - index: C-603
           cols:
             ac_name: 外部招聘人数
+        - index: Q-2010101
+          cols:
+            ac_name: 全职
+        - index: Q-2010102
+          cols:
+            ac_name: 兼职
+        - index: Q-205
+          cols:
+            ac_name: 房屋成本
+        - index: IPQ-205
+          cols:
+            ac_name: 房屋收入占比
+        - index: CPQ-205
+          cols:
+            ac_name: 房屋成本占比
+        - index: Q-20501
+          cols:
+            ac_name: 房屋租金
+        - index: Q-20502
+          cols:
+            ac_name: 房屋其他费用
 
   - df_fillna:
       value: 0
@@ -328,7 +354,9 @@ dataset_pipeline:
 
   - sort_by_index:
       sort_list: [
-          QS-1010203,Q-1010203,Q-701,QS-2017,IPQS-2017,Q-20101,C-601,QAH-20101,IPQ-20101,CPQ-20101,Q-202,QAH-202,IPQ-202,CPQ-202,Q-20201,QAH-20201,Q-20202,QAH-20202,Q-20203,QAH-20203,Q-20204,QAH-20204,Q-207,CS-6023,QAH-207,IPQ-207,CPQ-207,Q-20701,C-602,QAH-20701,Q-20702,C-603,QAH-20702,QS-1,IPQS-1
+          QS-1010203,Q-1010203,Q-701,QS-2017,IPQS-2017,Q-20101,C-601,QAH-20101,IPQ-20101,CPQ-20101,Q-2010101,Q-2010102,Q-202,QAH-202,
+          IPQ-202,CPQ-202,Q-20201,QAH-20201,Q-20202,QAH-20202,Q-20203,QAH-20203,Q-20204,QAH-20204,Q-205,IPQ-205,CPQ-205,Q-20501,Q-20502,Q-207,CS-6023,
+          QAH-207,IPQ-207,CPQ-207,Q-20701,C-602,QAH-20701,Q-20702,C-603,QAH-20702,QS-1,IPQS-1
       ]
 
   - row_int_format_by_index:
@@ -337,13 +365,13 @@ dataset_pipeline:
   - row_money_format_by_index:
       index_rows: [
           Q-1010203, Q-701, Q-20101, Q-202, Q-20201, Q-20202, Q-20203, Q-20204, Q-207, Q-20701, Q-20702,
-          QS-1010203, QS-2017, QS-1,
+          QS-1010203, QS-2017, QS-1,Q-2010101,Q-2010102,Q-205,Q-20501,Q-20502,
           QAH-20101, QAH-202, QAH-20201, QAH-20202, QAH-20203, QAH-20204, QAH-207, QAH-20701, QAH-20702
       ]
 
   - row_pct_format_by_index:
       index_rows: [
-          IPQS-2017, IPQ-20101, CPQ-20101, IPQ-202, CPQ-202, IPQ-207, CPQ-207, IPQS-1
+          IPQS-2017, IPQ-20101, CPQ-20101, IPQ-202, CPQ-202, IPQ-207, CPQ-207, IPQS-1,IPQ-205,CPQ-205
       ]
 
   - df_rename_columns:
