--- a/财报/21年财报20210206/cookbook/code/travel_taxi/supplier.yml
+++ b/财报/21年财报20210206/cookbook/code/travel_taxi/supplier.yml
@@ -206,15 +206,44 @@ dataset_pipeline:
         Q-20804: 0
         Q-2110201: 0
         Q-2110202: 0
+        Q-1030303: 0
+        Q-213: 0
+        Q-214: 0
+        Q-20805: 0
+        Q-2080101: 0
+        Q-2080102: 0
+        Q-2080103: 0
+        Q-2080104: 0
+        Q-2080105: 0
+        Q-2080106: 0
+        Q-2080201: 0
+        Q-2080202: 0
+        Q-2080301: 0
+        Q-2080302: 0
+        Q-2080303: 0
+        Q-2080501: 0
+        Q-2080502: 0
+        Q-2080503: 0
+        Q-2080504: 0
+        Q-2080505: 0
+        Q-2080506: 0
+        Q-21301: 0
+        Q-21302: 0
+        Q-21303: 0
+        Q-21304: 0
 
   - df_fillna:
       value: 0.0
 
   - row_eval_by_index:
       exp_str: |
+                {{Q-20805}} = {{Q-20805}} + {{Q-2080501}} + {{Q-2080502}} + {{Q-2080503}} + {{Q-2080504}} + {{Q-2080505}} + {{Q-2080506}}
+                {{Q-20803}} = {{Q-20803}} + {{Q-2080301}} + {{Q-2080302}} + {{Q-2080303}}
+                {{Q-20802}} = {{Q-20802}} + {{Q-2080201}} + {{Q-2080202}}
+                {{Q-20801}} = {{Q-20801}} + {{Q-2080101}} + {{Q-2080102}} + {{Q-2080103}} + {{Q-2080104}} + {{Q-2080105}} + {{Q-2080106}}
                 {{Q-10401}} = {{Q-1040101}} + {{Q-1040102}} + {{Q-1040103}}
                 {{Q-10402}} = {{Q-1040201}} + {{Q-1040202}} + {{Q-1040203}}
-                {{Q-10303}} = {{Q-1030301}} + {{Q-1030302}}
+                {{Q-10303}} = {{Q-1030301}} + {{Q-1030302}} + {{Q-1030303}}
                 {{Q-10102}} = {{Q-1010201}} + {{Q-1010202}} + {{Q-1010203}} + {{Q-1010204}}
                 {{QS-104013}} = {{Q-10401}} + {{Q-10402}} + {{Q-10102}} + {{Q-10303}}
                 {{CS-3013}} = {{C-301}} + {{C-302}} + {{C-303}}
@@ -232,11 +261,18 @@ dataset_pipeline:
                 {{Q-212}} = {{Q-21201}} + {{Q-21202}}
                 {{Q-20401}} = {{Q-2040101}} + {{Q-2040102}}
                 {{Q-20402}} = {{Q-2040201}} + {{Q-2040202}}
-                {{Q-208}} = {{Q-20801}} + {{Q-20802}} + {{Q-20803}} + {{Q-20804}}
-                {{QS-204010}} = {{Q-211}} + {{Q-212}} + {{Q-20401}} + {{Q-20402}} + {{Q-208}}
+                {{Q-208}} = {{Q-20801}} + {{Q-20802}} + {{Q-20803}} + {{Q-20804}} + {{Q-20805}}
+                {{Q-213}} = {{Q-21301}} + {{Q-21302}} + {{Q-21303}} + {{Q-21304}}
+                {{QS-204010}} = {{Q-211}} + {{Q-212}} +{{Q-213}} + {{Q-214}} + {{Q-20401}} + {{Q-20402}} + {{Q-208}}
+                {{IPQ-213}} = {{Q-213}} / {{QS-104013}}
+                {{CPQ-213}} = {{Q-213}} / {{QS-204010}}
+                {{IPQ-214}} = {{Q-214}} / {{QS-104013}}
+                {{CPQ-214}} = {{Q-214}} / {{QS-204010}}
                 {{CS-3078}} = {{C-307}} + {{C-308}}
                 {{CS-30910}} = {{C-309}} + {{C-310}}
-                {{CS-3016}} = {{CS-3013}} + {{CS-3046}}
+                {{CS-3014}} = {{CS-3013}} + {{CS-3046}}
+                {{CS-3016}} = {{CS-3078}} + {{CS-30910}}
+                {{QAH-20805}} = {{Q-20805}} / {{CS-3014}}
                 {{QSAH-104013}} = {{QS-104013}} / {{CS-3016}}
                 {{QAH-1040}} = {{QS-204010}} / {{CS-3016}}
                 {{CIP-204010}} = {{QS-204010}} / {{QS-104013}}
@@ -286,9 +322,12 @@ dataset_pipeline:
         - index: CS-3046
           cols:
             ac_name: 融资租出车辆数
-        - index: CS-3016
+        - index: CS-3014
           cols:
             ac_name: 总计租出车辆数
+        - index: CS-3016
+          cols:
+            ac_name: 总计租入车辆数
         - index: QSAH-104013
           cols:
             ac_name: 总计租出车单车收入
@@ -580,6 +619,96 @@ dataset_pipeline:
         - index: Q-20804
           cols:
             ac_name: 维修费
+        - index: Q-1030303
+          cols:
+            ac_name: 网格仓服务收入
+        - index: Q-2080101
+          cols:
+            ac_name: 停车费
+        - index: Q-2080102
+          cols:
+            ac_name: 洗车费
+        - index: Q-2080103
+          cols:
+            ac_name: 挪车费
+        - index: Q-2080104
+          cols:
+            ac_name: 日常保养检测
+        - index: Q-2080105
+          cols:
+            ac_name: 交付整备费
+        - index: Q-2080106
+          cols:
+            ac_name: 上牌费
+        - index: Q-2080201
+          cols:
+            ac_name: 车辆轮胎费
+        - index: Q-2080202
+          cols:
+            ac_name: 车辆半年度保养费
+        - index: Q-2080301
+          cols:
+            ac_name: 车辆年检费
+        - index: Q-2080302
+          cols:
+            ac_name: 车辆保险费
+        - index: Q-2080303
+          cols:
+            ac_name: 车辆年度保养费
+        - index: Q-20805
+          cols:
+            ac_name: 车辆附加费用
+        - index: Q-2080501
+          cols:
+            ac_name: 车辆GPS费用
+        - index: Q-2080502
+          cols:
+            ac_name: 车辆集中交付费用
+        - index: Q-2080503
+          cols:
+            ac_name: 车辆油电补费用
+        - index: Q-2080504
+          cols:
+            ac_name: 车辆管理费
+        - index: Q-2080505
+          cols:
+            ac_name: 车辆违章费
+        - index: Q-2080506
+          cols:
+            ac_name: 车辆杂费
+        - index: Q-213
+          cols:
+            ac_name: 佣金
+        - index: IPQ-213
+          cols:
+            ac_name: 佣金收入占比
+        - index: CPQ-213
+          cols:
+            ac_name: 佣金成本占比
+        - index: Q-21301
+          cols:
+            ac_name: 平台交付
+        - index: Q-21302
+          cols:
+            ac_name: 渠道销售
+        - index: Q-21303
+          cols:
+            ac_name: 续租佣金
+        - index: Q-21304
+          cols:
+            ac_name: 自营销售
+        - index: Q-214
+          cols:
+            ac_name: 司机福利费
+        - index: IPQ-214
+          cols:
+            ac_name: 司机福利费收入占比
+        - index: CPQ-214
+          cols:
+            ac_name: 司机福利费成本占比
+        - index: QAH-20805
+          cols:
+            ac_name: 车辆附加单车成本
 
   - df_fillna:
       value: 0
@@ -588,18 +717,30 @@ dataset_pipeline:
       sort_list: [ ac_code, ac_name, 合计 ]
 
   - sort_by_index:
-      sort_list: [QS-104013,CS-3016,QSAH-104013,Q-10401,CS-3013,QAH-10401,Q-1040101,C-301,QAH-1040101,Q-1040102,C-302,QAH-1040102,Q-1040103,C-303,QAH-1040103,Q-10402,CS-3046,QAH-10402,Q-1040201,C-304,QAH-1040201,Q-1040202,C-305,QAH-1040202,Q-1040203,C-306,QAH-1040203,Q-10303,Q-1030301,Q-1030302,Q-10102,Q-1010201,Q-1010202,Q-1010203,Q-1010204,Q-701,QS-204010,QAH-1040,CIP-204010,Q-20401,CS-3078,QA-20401,CIP-20401,CCP-20401,Q-2040101,C-307,QAH-2040101,Q-2040102,C-308,QAH-2040102,Q-20402,CS-30910,QAH-20402,IPQ-20402,CPQ-20402,Q-2040201,C-309,QAH-2040201,Q-2040202,C-310,QAH-2040202,Q-211,Q-21101,C-311,QAH-21101,Q-21102,Q-2110201,Q-2110202,IPQ-211,CPQ-211,Q-212,Q-21201,Q-21202,IPQ-212,CPQ-212,Q-208,QAH-208,IPQ-208,CPQ-208,Q-20801,QAH-20801,Q-20802,QAH-20802,Q-20803,QAH-20803,Q-20804,QAH-20804,QS-1,IPQS-1]
+      sort_list: [
+          QS-104013,CS-3014,QSAH-104013,Q-10401,CS-3013,QAH-10401,Q-1040101,C-301,QAH-1040101,Q-1040102,C-302,
+          QAH-1040102,Q-1040103,C-303,QAH-1040103,Q-10402,CS-3046,QAH-10402,Q-1040201,C-304,QAH-1040201,Q-1040202,C-305,
+          QAH-1040202,Q-1040203,C-306,QAH-1040203,Q-10303,Q-1030301,Q-1030302,Q-1030303,Q-10102,Q-1010201,Q-1010202,
+          Q-1010203,Q-1010204,Q-701,QS-204010,CS-3016,QAH-1040,CIP-204010,Q-20401,CS-3078,QA-20401,CIP-20401,CCP-20401,Q-2040101,
+          C-307,QAH-2040101,Q-2040102,C-308,QAH-2040102,Q-20402,CS-30910,QAH-20402,IPQ-20402,CPQ-20402,Q-2040201,C-309,
+          QAH-2040201,Q-2040202,C-310,QAH-2040202,Q-211,IPQ-211,CPQ-211,Q-21101,C-311,QAH-21101,Q-21102,Q-2110201,Q-2110202,
+          Q-212,IPQ-212,CPQ-212,Q-21201,Q-21202,Q-208,QAH-208,IPQ-208,CPQ-208,Q-20801,QAH-20801,Q-2080101,
+          Q-2080102,Q-2080103,Q-2080104,Q-2080105,Q-2080106,Q-20802,
+          QAH-20802,Q-2080201,Q-2080202,Q-20803,QAH-20803,Q-2080301,Q-2080302,Q-2080303,Q-20804,QAH-20804,Q-20805,
+          QAH-20805,Q-2080501,Q-2080502,Q-2080503,Q-2080504,Q-2080505,Q-2080506,Q-213,IPQ-213,CPQ-213,Q-21301,Q-21302,
+          Q-21303,Q-21304,Q-214,IPQ-214,CPQ-214,QS-1,IPQS-1
+      ]
 
   - row_int_format_by_index:
       index_rows: [
           C-301, C-302, C-303, C-304, C-305, C-306, C-307, C-308, C-309, C-310, C-311,
-          CS-3013, CS-3046, CS-3016, CS-3078, CS-30910
+          CS-3013, CS-3046 , CS-3014, CS-3016, CS-3078, CS-30910
       ]
 
   - row_pct_format_by_index:
       index_rows: [
           CIP-204010, CIP-20401, CCP-20401, IPQ-20402, CPQ-20402, IPQ-211, CPQ-211, IPQ-212, CPQ-212, IPQ-208,
-          CPQ-208, IPQS-1
+          CPQ-208, IPQS-1,IPQ-213,CPQ-213,IPQ-214,CPQ-214
       ]
 
   - row_money_format_by_index:
@@ -610,7 +751,9 @@ dataset_pipeline:
           QAH-1040, Q-20401, QA-20401, Q-2040101, QAH-2040101, Q-2040102, QAH-2040102, Q-20402, QAH-20402, Q-2040201,
           QAH-2040201, Q-2040202, QAH-2040202, Q-211, Q-21101, QAH-21101, Q-21102, Q-2110201, Q-2110202, Q-212,
           Q-21201, Q-21202, Q-208, QAH-208, Q-20801, QAH-20801, Q-20802, QAH-20802, Q-20803, QAH-20803, Q-20804,
-          QAH-20804, QS-1
+          QAH-20804, QS-1,Q-1030303,Q-2080101,Q-2080102,Q-2080103,Q-2080104,Q-2080105,Q-2080106,Q-2080201,Q-2080202,
+          Q-2080301,Q-2080302,Q-2080303,Q-20805,QAH-20805,Q-2080501,Q-2080502,Q-2080503,Q-2080504,Q-2080505,Q-2080506,
+          Q-213,Q-21301,Q-21302,Q-21303,Q-21304,Q-214
       ]
 
   - row_float_format_by_index:
