--- a/财报/21年财报20210206/cookbook/summary/ac.yml
+++ b/财报/21年财报20210206/cookbook/summary/ac.yml
@@ -125,18 +125,47 @@ dataset_pipeline:
         Q-30201: 0
         Q-2010101: 0
         Q-2010102: 0
+        Q-1030303: 0
+        Q-2080101: 0
+        Q-2080102: 0
+        Q-2080103: 0
+        Q-2080104: 0
+        Q-2080105: 0
+        Q-2080106: 0
+        Q-2080201: 0
+        Q-2080202: 0
+        Q-2080301: 0
+        Q-2080302: 0
+        Q-2080303: 0
+        Q-20805: 0
+        Q-2080501: 0
+        Q-2080502: 0
+        Q-2080503: 0
+        Q-2080504: 0
+        Q-2080505: 0
+        Q-2080506: 0
+        Q-21301: 0
+        Q-21302: 0
+        Q-21303: 0
+        Q-21304: 0
+        Q-214: 0
+        Q-30108: 0
 
   - df_fillna:
       value: 0.0
 
   - row_eval_by_index:
       exp_str: |
-                {{Q-20101}}={{Q-20101}}+{{Q-2010101}}+{{Q-2010102}}
+                {{Q-213}}={{Q-21301}} + {{Q-21302}} + {{Q-21303}} + {{Q-21304}}
+                {{Q-20805}}={{Q-20805}} + {{Q-2080501}} + {{Q-2080502}} + {{Q-2080503}} + {{Q-2080504}} + {{Q-2080505}} + {{Q-2080506}}
+                {{Q-20802}}={{Q-20802}} + {{Q-2080201}} + {{Q-2080202}}
+                {{Q-20801}}={{Q-20801}} + {{Q-2080101}} + {{Q-2080102}} + {{Q-2080103}} + {{Q-2080104}} + {{Q-2080105}} + {{Q-2080106}}
+                {{Q-20101}}={{Q-20101}} + {{Q-2010101}} + {{Q-2010102}}
                 {{Q-10101}} = {{Q-1010101}} + {{Q-1010102}} + {{Q-1010103}} + {{Q-1010104}}
                 {{Q-10102}} = {{Q-1010201}} + {{Q-1010202}} + {{Q-1010203}} + {{Q-1010204}}
                 {{Q-101}} = {{Q-10101}} + {{Q-10102}}
                 {{Q-102}} = {{Q-10201}} + {{Q-10202}} + {{Q-10203}}
-                {{Q-10303}} = {{Q-1030301}} + {{Q-1030302}}
+                {{Q-10303}} = {{Q-1030301}} + {{Q-1030302}} + {{Q-1030303}}
                 {{Q-103}} = {{Q-10301}} + {{Q-10302}} + {{Q-10303}}
                 {{Q-10401}} = {{Q-1040101}} + {{Q-1040102}} + {{Q-1040103}}
                 {{Q-10402}} = {{Q-1040201}} + {{Q-1040202}} + {{Q-1040203}}
@@ -154,12 +183,12 @@ dataset_pipeline:
                 {{Q-21102}} = {{Q-2110201}} + {{Q-2110202}}
                 {{Q-211}} = {{Q-21101}} + {{Q-21102}}
                 {{Q-212}} = {{Q-21201}} + {{Q-21202}}
-                {{Q-301}} = {{Q-30102}} + {{Q-30103}} + {{Q-30104}} + {{Q-30105}} + {{Q-30106}} + {{Q-30107}}
+                {{Q-301}} = {{Q-30102}} + {{Q-30103}} + {{Q-30104}} + {{Q-30105}} + {{Q-30106}} + {{Q-30107}} + {{Q-30108}}
                 {{Q-30201}} = {{Q-3020101}} + {{Q-3020102}}
                 {{Q-302}} = {{Q-30201}} + {{Q-30202}} + {{Q-30203}} + {{Q-30204}} + {{Q-30205}} + {{Q-30206}} + {{Q-30207}} + {{Q-30208}} + {{Q-30209}} + {{Q-30210}}
                 {{Q-303}} = {{Q-30301}} + {{Q-30302}} + {{Q-30303}}
                 {{QS-1000}} = {{Q-101}} + {{Q-102}} + {{Q-103}} + {{Q-104}}
-                {{QS-2000}} = {{Q-201}} + {{Q-202}} + {{Q-203}} + {{Q-204}} + {{Q-205}} + {{Q-206}} + {{Q-207}} + {{Q-208}} + {{Q-211}} + {{Q-212}} + {{Q-209}} + {{Q-210}}
+                {{QS-2000}} = {{Q-201}} + {{Q-202}} + {{Q-203}} + {{Q-204}} + {{Q-205}} + {{Q-206}} + {{Q-207}} + {{Q-208}} + {{Q-211}} + {{Q-212}} + {{Q-209}} + {{Q-210}} + {{Q-213}} + {{Q-214}}
                 {{QS-30101}} = {{Q-30101}}
                 {{QS-3000}} = {{Q-301}} + {{Q-302}} + {{Q-303}}
                 {{QS-4000}} = {{Q-401}} + {{Q-402}} + {{Q-403}} + {{Q-404}}
@@ -521,6 +550,90 @@ dataset_pipeline:
         - index: QS-3000
           cols:
             ac_name: 管理费用
+        - index: Q-1030303
+          cols:
+            ac_name: 网格仓服务收入
+        - index: Q-2010101
+          cols:
+            ac_name: 全职
+        - index: Q-2010102
+          cols:
+            ac_name: 兼职
+        - index: Q-2080101
+          cols:
+            ac_name: 停车费
+        - index: Q-2080102
+          cols:
+            ac_name: 洗车费
+        - index: Q-2080103
+          cols:
+            ac_name: 挪车费
+        - index: Q-2080104
+          cols:
+            ac_name: 日常保养检测
+        - index: Q-2080105
+          cols:
+            ac_name: 交付整备费
+        - index: Q-2080106
+          cols:
+            ac_name: 上牌费
+        - index: Q-2080201
+          cols:
+            ac_name: 车辆轮胎费
+        - index: QQ-2080202
+          cols:
+            ac_name: 车辆半年度保养费
+        - index: Q-2080301
+          cols:
+            ac_name: 车辆年检费
+        - index: Q-2080302
+          cols:
+            ac_name: 车辆保险费
+        - index: Q-2080303
+          cols:
+            ac_name: 车辆年度保养费
+        - index: Q-20805
+          cols:
+            ac_name: 车辆附加费用
+        - index: Q-2080501
+          cols:
+            ac_name: 车辆GPS费用
+        - index: Q-2080502
+          cols:
+            ac_name: 车辆集中交付费用
+        - index: Q-2080503
+          cols:
+            ac_name: 车辆油电补费用
+        - index: Q-2080504
+          cols:
+            ac_name: 车辆管理费
+        - index: Q-2080505
+          cols:
+            ac_name: 车辆违章费
+        - index: Q-2080506
+          cols:
+            ac_name: 车辆杂费
+        - index: Q-213
+          cols:
+            ac_name: 佣金
+        - index: Q-21301
+          cols:
+            ac_name: 平台交付
+        - index: Q-21302
+          cols:
+            ac_name: 渠道销售
+        - index: Q-21303
+          cols:
+            ac_name: 续租佣金
+        - index: Q-21304
+          cols:
+            ac_name: 自营销售
+        - index: Q-214
+          cols:
+            ac_name: 司机福利费
+        - index: Q-30108
+          cols:
+            ac_name: 三线服务费
 
   - df_fillna:
       value: 0
@@ -529,7 +642,18 @@ dataset_pipeline:
       sort_list: [ ac_code, ac_name, money ]
 
   - sort_by_index:
-      sort_list: [QS-1000,Q-101,Q-10101,Q-1010101,Q-1010102,Q-1010103,Q-1010104,Q-10102,Q-1010201,Q-1010202,Q-1010203,Q-1010204,Q-102,Q-10201,Q-10202,Q-10203,Q-103,Q-10301,Q-10302,Q-10303,Q-1030301,Q-1030302,Q-104,Q-10401,Q-1040101,Q-1040102,Q-1040103,Q-10402,Q-1040201,Q-1040202,Q-1040203,QS-2000,Q-201,Q-20101,Q-20102,Q-202,Q-20201,Q-20202,Q-20203,Q-20204,Q-20205,Q-203,Q-20301,Q-20302,Q-20303,Q-204,Q-20401,Q-2040101,Q-2040102,Q-20402,Q-2040201,Q-2040202,Q-205,Q-20501,Q-20502,Q-206,Q-20601,Q-20602,Q-20603,Q-20604,Q-20605,Q-207,Q-20701,Q-20702,Q-208,Q-20801,Q-20802,Q-20803,Q-20804,Q-211,Q-21101,Q-21102,Q-2110201,Q-2110202,Q-212,Q-21201,Q-21202,Q-209,Q-210,QS-30101,Q-30101,QS-3000,Q-301,Q-30102,Q-30103,Q-30104,Q-30105,Q-30106,Q-30107,Q-302,Q-30201,Q-3020101,Q-3020102,Q-30202,Q-30203,Q-30204,Q-30205,Q-30206,Q-30207,Q-30208,Q-30209,Q-30210,Q-303,Q-30301,Q-30302,Q-30303,QS-4000,Q-401,Q-402,Q-403,Q-404,Q-500,Q-600,QS-7000,Q-800,Q-900]
+      sort_list: [
+          QS-1000,Q-101,Q-10101,Q-1010101,Q-1010102,Q-1010103,Q-1010104,Q-10102,Q-1010201,Q-1010202,Q-1010203,Q-1010204,
+          Q-102,Q-10201,Q-10202,Q-10203,Q-103,Q-10301,Q-10302,Q-10303,Q-1030301,Q-1030302,Q-1030303,Q-104,Q-10401,Q-1040101,
+          Q-1040102,Q-1040103,Q-10402,Q-1040201,Q-1040202,Q-1040203,QS-2000,Q-201,Q-20101,Q-2010101,Q-2010102,Q-20102,Q-202,Q-20201,
+          Q-20202,Q-20203,Q-20204,Q-20205,Q-203,Q-20301,Q-20302,Q-20303,Q-204,Q-20401,Q-2040101,Q-2040102,Q-20402,
+          Q-2040201,Q-2040202,Q-205,Q-20501,Q-20502,Q-206,Q-20601,Q-20602,Q-20603,Q-20604,Q-20605,Q-207,Q-20701,
+          Q-20702,Q-208,Q-20801,Q-2080101,Q-2080102,Q-2080103,Q-2080104,Q-2080105,Q-2080106,Q-20802,Q-2080201,Q-2080202,Q-20803,
+          Q-2080301,Q-2080302,Q-2080303,Q-20804,Q-20805,Q-2080501,Q-2080502,Q-2080503,Q-2080504,Q-2080505,Q-2080506,Q-209,Q-210,
+          Q-211,Q-21101,Q-21102,Q-2110201,Q-2110202,Q-212,Q-21201,Q-21202,Q-213,Q-21301,Q-21302,Q-21303,Q-21304,Q-214,
+          QS-30101,Q-30101,QS-3000,Q-301,Q-30108,Q-30102,Q-30103,Q-30104,Q-30105,Q-30106,Q-30107,Q-302,Q-30201,
+          Q-3020101,Q-3020102,Q-30202,Q-30203,Q-30204,Q-30205,Q-30206,Q-30207,Q-30208,Q-30209,Q-30210,Q-303,Q-30301,
+          Q-30302,Q-30303,QS-4000,Q-401,Q-402,Q-403,Q-404,Q-500,Q-600,QS-7000,Q-800,Q-900]
 
   - row_money_format_by_index:
       index_rows: [
@@ -541,7 +665,10 @@ dataset_pipeline:
           Q-20702,Q-208,Q-20801,Q-20802,Q-20803,Q-20804,Q-211,Q-21101,Q-21102,Q-2110201,Q-2110202,Q-212,Q-21201,
           Q-21202,Q-209,Q-210,QS-30101,QS-3000,Q-301,Q-30102,Q-30103,Q-30104,Q-30105,Q-30106,Q-30107,Q-30101,
           Q-302,Q-30201,Q-3020101,Q-3020102,Q-30202,Q-30203,Q-30204,Q-30205,Q-30206,Q-30207,Q-30208,Q-30209,Q-30210,
-          Q-303,Q-30301,Q-30302,Q-30303,QS-4000,Q-401,Q-402,Q-403,Q-404,Q-500,Q-600,QS-7000,Q-800,Q-900,Q-20205
+          Q-303,Q-30301,Q-30302,Q-30303,QS-4000,Q-401,Q-402,Q-403,Q-404,Q-500,Q-600,QS-7000,Q-800,Q-900,Q-20205,
+          Q-1030303,Q-2010101,Q-2010102,Q-2080101,Q-2080102,Q-2080103,Q-2080104,Q-2080105,Q-2080106,Q-2080301,Q-2080302,
+          Q-2080303,Q-20805,Q-2080501,Q-2080502,Q-2080503,Q-2080504,Q-2080505,Q-2080506,Q-213,Q-21301,Q-21302,Q-21303,
+          Q-21304,Q-214,Q-30108,Q-2080201,Q-2080202
       ]
 
   - df_rename_columns:
